Add and set maxZoom option for DataMap config

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -256,6 +256,7 @@ tabs:
         these are mapped to the below-minimum colour.* <br/>
     config:
       minZoom: 6
+      maxZoom: 13
       maxBounds: [ [65, -150], [45, -100] ]
       variables:
         # NB: range and tick values are in *display* units.
