--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -585,7 +585,7 @@ tabs:
 
       1. Information for the Summary and Impacts tabs is drawn from a set of
       projections from 12 different Global Climate Models (GCMs), each using one
-      run of the RCP 8.5 (high emissions) greenhouse gas emissions scenario.
+      run of the SSP 5-8.5 (high emissions) greenhouse gas emissions scenario.
       This set of projections is referred to as the "ensemble." By the end of
       the 21st century, the RCP 8.5 scenario includes an atmospheric
       concentration of greenhouse gases, expressed as carbon dioxide (CO2)
@@ -614,13 +614,23 @@ tabs:
     disabled: false
     label: References
     content: |
+      Brunner, L., Pendergrass, A. G., Lehner, F., Merrifield, A. L., Lorenz, R., & Knutti, R., 2020: [Reduced global warming from CMIP6 projections when weighting models by performance and independence](https://esd.copernicus.org/articles/11/995/2020/). Earth System Dynamics, 11, 4, 995-1012, doi:10.5194/esd-11-995-2020. 
+      
+      Cannon, A. J., 2018: [Multivariate quantile mapping bias correction: an N-dimensional probability density function transform for climate model simulations of multiple variables](https://link.springer.com/article/10.1007/s00382-017-3580-6). Climate Dynamics, 50, 31-49, doi:10.1007/s00382-017-3580-6.
+      
       Cannon, A.J., Sobie, S.R., Murdock, T.Q., 2015: _Bias correction of simulated precipitation by quantile mapping: how well do methods preserve relative changes in quantiles and extremes?_ Journal of Climate, 28(17): 6938-6959. https://doi.org/10.1175/jcli-d-14-00754.1
+
+      Eyring, V., S. Bony, G.A. Meehl, C. Senior, B. Stevens, R.J. Stouffer and K.E. Taylor, 2016: [Overview of the Coupled Model Intercomparison Project Phase 6 (CMIP6) experimental design and organization](https://gmd.copernicus.org/articles/9/1937/2016/). Geoscientific Model Development, 9(5), 1937-1958.
 
       Government of British Columbia. _Climate Change Indicators._ (web page). https://www2.gov.bc.ca/gov/content/environment/research-monitoring-reporting/reporting/environmental-reporting-bc/climate-change-indicators
 
       Hamlet A.F., D.P. Lettenmaier. 2005. _Effects of Temperature and Precipitation Variability on Snowpack Trends in the Western U.S._ Journal of Climate, 18 (21): pp. 4545-4561.
 
       Hamlet A.F., D.P. Lettenmaier. 2007. _Effects of 20th Century Warming and Climate Variability on Flood Risk in the Western U.S._ Water Resources Research, 43: https://doi.org/10.1029/2006wr005099.
+
+      MacDonald, H. et al., 2020: [North American historical monthly spatial climate dataset, 1901–2016](https://www.nature.com/articles/s41597-020-00737-2). Scientific Data, 7, 411. doi:10.1038/s41597-020-00737-2. 
+
+      MacDonald H., D.W. McKenney, X.L. Wang, J. Pedlar, P. Papadopol, K. Lawrence, Y. Feng and M.F. Hutchinson, 2021: [Spatial Models of Adjusted Precipitation for Canada at Varying Time Scales](https://journals.ametsoc.org/view/journals/apme/60/3/JAMC-D-20-0041.1.xml). Journal of Applied Meteorology and Climatology, 60, 3, 291–304, doi:10.1175/JAMC-D-20-0041.1.
 
       Mote P.W., A.F. Hamlet, M. Clark, D.P. Lettenmaier. 2005. _Declining Mountain Snowpack in Western North America_. Bulletin of the American Meteorological Society, 86(1):39-49.
 
@@ -629,8 +639,12 @@ tabs:
       Pacific Climate Impacts Consortium. 2020. _Data Preparation for Climate Explorer, Precipitation as Snow_ (software).
       https://github.com/pacificclimate/climate-explorer-data-prep#generate_prsn-generate-snowfall-file
 
+      Pacific Climate Impacts Consortium. 2023:  [Downscaled CMIP6 Climate Model Subset Selection](http://pacificclimate.org/sites/default/files/publications/cmip6_gcm_selection_final_report.pdf)
+
       Pacific Climate Impacts Consortium. 2020. _Computation of CLIMDEX indices_ (software).
       https://cran.r-project.org/web/packages/climdex.pcic/index.html
+
+      Riahi, K. et al. 2017:  [The Shared Socioeconomic Pathways and their energy, land use, and greenhouse gas emissions implications: An overview](https://www.sciencedirect.com/science/article/pii/S0959378016300681). Global Environmental Change, 42, 153-168, doi:10.1016/j.gloenvcha.2016.05.009.
 
       Rodenhuis, D.R., Bennett, K.E., Werner, A.T., Murdock, T.Q., Bronaugh, D. Revised 2009. _Hydro-climatology and future climate impacts in British Columbia_. Pacific Climate Impacts Consortium, University of Victoria, Victoria BC, 132 pp. Provides additional information on future climate projects in British Columbia.
 
@@ -638,7 +652,7 @@ tabs:
 
       Taylor, K. E., R. J. Stouffer, and G. A. Meehl, 2012: _An overview of CMIP5 and the experiment design._ Bull. Amer. Meteor. Soc., 93, 485–498, https://doi.org/10.1175/bams-d-11-00094.1
 
-      Werner, A. T. and A. J. Cannon, A. J., 2016: _Hydrologic extremes – an intercomparison of multiple gridded statistical downscaling methods._ Hydrololgy and Earth System Sciences, 20, 1483-1508, https://doi.org/10.5194/hess-20-1483-2016.
+      Werner, A. T. and A. J. Cannon, A. J., 2016: _Hydrologic extremes – an intercomparison of multiple gridded statistical downscaling methods._ Hydrology and Earth System Sciences, 20, 1483-1508, https://doi.org/10.5194/hess-20-1483-2016.
 
 
   about:
@@ -671,7 +685,7 @@ tabs:
               data set is subject to the terms of use of each source organization.
               For further details please refer to:
 
-              * [The Coupled Model Intercomparison Project](https://pacificclimate.org/sites/default/files/tou-cmip5-pcmdi_llnl_gov_february-19th-2014.pdf)
+              * [The Coupled Model Intercomparison Project](https://pcmdi.llnl.gov/CMIP6/TermsOfUse/TermsOfUse6-1.html)
               * [National Center for Atmospheric Research Earth System Grid](https://pacificclimate.org/sites/default/files/tou_earthsystemgrid_february-19th-2014.pdf)
 
           - header: No Warranty
@@ -690,8 +704,9 @@ tabs:
             body: |
               Development of the original version of Plan2Adapt was been made possible through funding and
               support provided by the
+              [BC Ministry of Emergency Management and Climate Readiness](https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/emergency-management-and-climate-readiness)
               [BC Ministry of Environment & Climate Change Strategy](https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/environment-climate-change),
-              [BC Ministry of Forests, Lands, Natural Resource Operations and Rural Development](https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/forests-lands-natural-resource-operations-and-rural-development)
+              [BC Ministry of Forests, Lands, Natural Resource Operations and Rural Development](https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/forests)
               Forest Science Program,
               [BC Ministry of Municipal Affairs and Housing](https://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/municipal-affairs-housing),
               and
@@ -749,14 +764,20 @@ tabs:
             body: Climate science lead.
           - header: '[James Hiebert](https://pacificclimate.org/about-pcic/people/james-hiebert)'
             body: Development team lead.
+          - header: '[Charles Curry](https://pacificclimate.org/about-pcic/people/charles-curry)'
+            body: Regional climate impacts lead.
           - header: '[Lee Zeman](https://pacificclimate.org/about-pcic/people/lee-zeman)'
             body: Backend engineer. Data wrangling.
-          - header: '[Nikola Radoš](https://pacificclimate.org/about-pcic/people/nikola-rados)'
-            body: DevOps specialist. Implementor of Impacts rules engine.
           - header: '[Rod Glover](https://pacificclimate.org/about-pcic/people/rod-glover)'
             body: Front-end engineer. UI design and implementation.
-          - header: '[Matthew Benstead](https://pacificclimate.org/about-pcic/people/matthew-benstead)'
+          - header: '[Tom Kunkel](https://pacificclimate.org/about-pcic/people/tom-kunkel)'
             body: System administrator. Deployment and security.
+          - header: '[Eric Yvorchuk](https://pacificclimate.org/about-pcic/people/eric-yvorchuk-0)'
+            body: TBD
+          - header: '[Stephen Sobie](https://pacificclimate.org/about-pcic/people/stephen-sobie)'
+            body: TBD
+          - header: '[Quintin Sparks](https://pacificclimate.org/about-pcic/people/quintin-sparks)'
+            body: TBD
 
 components:
   notes:
