--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "assert": "^2.1.0",
     "axios": "^0.21.3",
     "bootstrap": "^4.3.1",
-    "buffer": "npm:buffer@^6.0.3",
+    "buffer": "^6.0.3",
     "c3": "^0.7.15",
     "classnames": "^2.2.6",
     "js-yaml": "^3.13.1",
@@ -15,7 +15,7 @@
     "lethargy": "^1.0.9",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
-    "path-browserify": "npm:path-browserify@^1.0.1",
+    "path-browserify": "^1.0.1",
     "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#3.1.0",
     "pcic-react-external-text": "git+https://git@github.com/pacificclimate/pcic-react-external-text.git#1.0.0",
     "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git#1.2.2",
@@ -34,7 +34,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^2.3.0",
     "stream": "0.0.2",
-    "stream-browserify": "npm:stream-browserify@^3.0.0",
+    "stream-browserify": "^3.0.0",
     "url-join": "^4.0.0",
     "xml-js": "^1.6.9"
   },
