Revert "Fix path to entypoint.sh"
This reverts commit 10553ecdd8afbb097f9240e36a0f378c4f63aab8.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,4 +27,4 @@ ARG REACT_APP_VERSION
 ENV REACT_APP_VERSION $REACT_APP_VERSION
 
 USER node
-CMD ["/bin/bash", "docker/entrypoint.sh"]
+CMD ["/bin/bash", "/docker/entrypoint.sh"]
