Update env vars & packages, add craco config & node

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/dev/pcex/api
+REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/dev/plan2adapt/pcex-api/
 REACT_APP_BASE_MAP=BC
-REACT_APP_BC_BASE_MAP_TILES_URL=http://142.104.230.53:30790/osm-bc-lite-test/{z}/{x}/{y}.png
-REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/regions/ows
+REACT_APP_BC_BASE_MAP_TILES_URL=https://services.pacificclimate.org/tiles/bc-albers-lite/{z}/{x}/{y}.png
+REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/dev/plan2adapt/bc_regions/ows 
 REACT_APP_RULES_ENGINE_URL=https://services.pacificclimate.org/plan2adapt/impacts
-REACT_APP_ENSEMBLE_NAME=p2a_classic
-REACT_APP_MODEL_ID=PCIC12;anusplin
-REACT_APP_EMISSIONS_SCENARIOS=historical,rcp85;historical, rcp85;historical
+REACT_APP_STATS_URL=https://services.pacificclimate.org/dev/plan2adapt/impacts/stats
+REACT_APP_ENSEMBLE_NAME=p2a_cmip6_mbcn
+REACT_APP_MODEL_ID=PCIC12;PCIC_BLEND_v1
+REACT_APP_EMISSIONS_SCENARIOS=historical,ssp585;historical, ssp585;historical
 REACT_APP_NCWMS_URL=https://services.pacificclimate.org/ncwms
 REACT_APP_MAP_LAYER_ID_TYPE=dynamic
 REACT_APP_MAP_LAYER_ID_PREFIX=x
