Add baseline period and CanDCS-M6 to summary prologue

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -42,8 +42,8 @@ tabs:
     # MD doesn't let you span table rows or columns.
     prologue: |
       This table shows projected changes in regional average temperature, 
-      precipitation and derived climate variables from the baseline historical period to the specified future period under a high emissions scenario (SSP5-8.5). 
-      The results are drawn from an ensemble of 12 global climate models downscaled over Canada (PCIC12), characterized by both a median value and a likely range. 
+      precipitation and derived climate variables from the baseline historical period (${baselineTimePeriod.start_date} - ${baselineTimePeriod.end_date}) to the specified future period under a high emissions scenario (SSP5-8.5). 
+      The results are drawn from an ensemble of 12 global climate models downscaled over Canada (i.e. the PCIC12 subset of CanDCS-M6), characterized by both a median value and a likely range. 
       See the Notes below and PCIC's Statistically Downscaled Climate Scenarios page for more information.
 
     lowBaselineWarning: |
