--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -98,6 +98,7 @@ tabs:
             - annual
             - winter
             - spring
+            - fall
         - variable: gdd
           display: absolute
           displayUnits: degree-days
