--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -626,6 +626,10 @@ tabs:
       Cannon, A. J., 2018: [Multivariate quantile mapping bias correction: an N-dimensional probability density function transform for climate model simulations of multiple variables](https://link.springer.com/article/10.1007/s00382-017-3580-6). Climate Dynamics, 50, 31-49, doi:10.1007/s00382-017-3580-6.
       
       Cannon, A.J., Sobie, S.R., Murdock, T.Q., 2015: _Bias correction of simulated precipitation by quantile mapping: how well do methods preserve relative changes in quantiles and extremes?_ Journal of Climate, 28(17): 6938-6959. https://doi.org/10.1175/jcli-d-14-00754.1
+      
+      Curry, C.L., D. Ouali, S.R. Sobie, and F.W. Zwiers (2023) Downscaled CMIP6 Climate Model Subset Selection, Pacific Climate Impacts Consortium, University of Victoria, Victoria, BC, 39 pp.
+
+      Dai, A., 2008: Temperature and pressure dependence of the rain-snow phase transition over land and ocean. Geophysical Research Letters, 35 (12), doi:10.1029/2008GL033295.
 
       Eyring, V., S. Bony, G.A. Meehl, C. Senior, B. Stevens, R.J. Stouffer and K.E. Taylor, 2016: [Overview of the Coupled Model Intercomparison Project Phase 6 (CMIP6) experimental design and organization](https://gmd.copernicus.org/articles/9/1937/2016/). Geoscientific Model Development, 9(5), 1937-1958.
 
@@ -635,13 +639,11 @@ tabs:
 
       Hamlet A.F., D.P. Lettenmaier. 2007. _Effects of 20th Century Warming and Climate Variability on Flood Risk in the Western U.S._ Water Resources Research, 43: https://doi.org/10.1029/2006wr005099.
 
+      Heather MacDonald, Daniel W. McKenney, Xiaolan L. Wang, John Pedlar, Pia Papadopol, Kevin Lawrence, Yang Feng, and Michael F. Hutchinson. (2021) Spatial Models of Adjusted Precipitation for Canada at Varying Time Scales. Journal of Applied Meteorology and Climatology, 60(3):291–304, 1558-8432. doi: 10.1175/JAMC-D-20-0041.1
+
       MacDonald, H. et al., 2020: [North American historical monthly spatial climate dataset, 1901–2016](https://www.nature.com/articles/s41597-020-00737-2). Scientific Data, 7, 411. doi:10.1038/s41597-020-00737-2. 
 
-      MacDonald H., D.W. McKenney, X.L. Wang, J. Pedlar, P. Papadopol, K. Lawrence, Y. Feng and M.F. Hutchinson, 2021: [Spatial Models of Adjusted Precipitation for Canada at Varying Time Scales](https://journals.ametsoc.org/view/journals/apme/60/3/JAMC-D-20-0041.1.xml). Journal of Applied Meteorology and Climatology, 60, 3, 291–304, doi:10.1175/JAMC-D-20-0041.1.
-
       Mote P.W., A.F. Hamlet, M. Clark, D.P. Lettenmaier. 2005. _Declining Mountain Snowpack in Western North America_. Bulletin of the American Meteorological Society, 86(1):39-49.
-
-      Murdock, T.Q. and D.L. Spittlehouse. 2011. _Selecting and Using Climate Change Scenarios for British Columbia_. Pacific Climate Impacts Consortium, University of Victoria, Victoria, BC, 39 pp.
 
       Pacific Climate Impacts Consortium. 2020. _Data Preparation for Climate Explorer, Precipitation as Snow_ (software).
       https://github.com/pacificclimate/climate-explorer-data-prep#generate_prsn-generate-snowfall-file
@@ -657,10 +659,11 @@ tabs:
 
       Sobie, S.R. and T.Q. Murdock, 2017: High-Resolution Statistical Downscaling in Southwestern British Columbia. Journal of Applied Meteorology and Climatology, 56, 6, 1625–1641, https://doi.org/10.1175/jamc-d-16-0287.1
 
-      Taylor, K. E., R. J. Stouffer, and G. A. Meehl, 2012: _An overview of CMIP5 and the experiment design._ Bull. Amer. Meteor. Soc., 93, 485–498, https://doi.org/10.1175/bams-d-11-00094.1
+      Sobie, S.R., D. Ouali, C.L. Curry, and F.W. Zwiers. Multivariate Canadian Downscaled Climate Scenarios for CMIP6 (CanDCS-M6). Geoscience Data Journal, Accepted.
 
       Werner, A. T. and A. J. Cannon, A. J., 2016: _Hydrologic extremes – an intercomparison of multiple gridded statistical downscaling methods._ Hydrology and Earth System Sciences, 20, 1483-1508, https://doi.org/10.5194/hess-20-1483-2016.
-
+      
+      Arelia T. Werner, Markus A. Schnorbus, Rajesh R. Shrestha, Alex J. Cannon, Francis W. Zwiers, Gildas Dayon, and Faron Anslow. A long-term, temporally consistent, gridded daily meteorological dataset for northwestern North America. Scientific Data, 6:180299, January 2019. doi: 10.1038/sdata.2018.299
 
   about:
     disabled: false
@@ -728,7 +731,7 @@ tabs:
               We thank the Landscape Analysis and Applications section of the
               Canadian Forest Service, Natural Resources Canada, for developing
               and making available the Canada-wide historical daily gridded
-              climate dataset used as the downscaling target.
+              climate dataset used developing the PCIC-Blend downscaling target.
 
               #### [Environment and Climate Change Canada](http://www.ec.gc.ca/)
 
@@ -741,7 +744,7 @@ tabs:
 
               We acknowledge the World Climate Research Programme’s
               Working Group on Coupled Modelling, which is responsible for
-              CMIP5, and we thank the climate modeling groups for producing
+              CMIP6, and we thank the climate modeling groups for producing
               and making available their GCM output.
 
               #### [U.S. Department of Energy](https://www.energy.gov/)
