Use decimal place precision formatting in place of sigfigs

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -76,13 +76,13 @@ tabs:
         - variable: tasmean
           display: absolute
           displayUnits: °C
-          precision: 2
+          precision: 1
           seasons:
             - annual
         - variable: pr
           display: relative
           displayUnits: '%'
-          precision: 2
+          precision: 1
           seasons:
             - annual
             - summer
@@ -90,7 +90,7 @@ tabs:
         - variable: prsn
           display: relative
           displayUnits: '%'
-          precision: 2
+          precision: 1
           seasons:
             - annual
             - winter
@@ -98,25 +98,25 @@ tabs:
         - variable: gdd
           display: absolute
           displayUnits: degree-days
-          precision: 3
+          precision: 0
           seasons:
             - annual
         - variable: ffd
           display: absolute
           displayUnits: days
-          precision: 2
+          precision: 0
           seasons:
             - annual
         - variable: hdd
           display: absolute
           displayUnits: degree-days
-          precision: 3
+          precision: 0
           seasons:
             - annual
         - variable: cdd
           display: absolute
           displayUnits: degree-days
-          precision: 3
+          precision: 0
           seasons:
             - annual
     notes: |
@@ -558,24 +558,38 @@ tabs:
         ffd:
           display: absolute
           displayUnits: days
+          precision: 0
+          medianUnit: days
         gdd:
           display: absolute
           displayUnits: degree-days
+          precision: 0
+          medianUnit: degree-days
         hdd:
           display: absolute
           displayUnits: degree-days
+          precision: 0
+          medianUnit: degree-days
         cdd:
           display: absolute
           displayUnits: degree-days
+          precision: 0
+          medianUnit: degree-days
         pr:
           display: relative
           displayUnits: '%'
-        prsn:
+          precision: 1
+          medianUnit: mm/day
+        snow:
           display: relative
           displayUnits: '%'
-        tasmean:
+          precision: 1
+          medianUnit: mm/day
+        tas:
           display: absolute
           displayUnits: °C
+          precision: 1
+          medianUnit: °C
 
   notes:
     disabled: false
