--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -273,7 +273,7 @@ tabs:
         ffd:
           display: absolute
           displayUnits: days
-          palette: x-Occam
+          palette: seq-OrRd
           seasons:
             annual:
               range:
@@ -303,7 +303,7 @@ tabs:
         gdd:
           display: absolute
           displayUnits: degree-days
-          palette: x-Occam
+          palette: seq-YlGn
           seasons:
             annual:
               range:
@@ -333,7 +333,7 @@ tabs:
         hdd:
           display: absolute
           displayUnits: degree-days
-          palette: x-Occam
+          palette: seq-PuBu
           seasons:
             winter:
               range:
@@ -363,7 +363,7 @@ tabs:
         cdd:
           display: absolute
           displayUnits: degree-days
-          palette: x-Occam
+          palette: seq-OrRd
           seasons:
             winter:
               range:
@@ -392,7 +392,7 @@ tabs:
               ticks: [0, 100, 200, 300, 400, 500]
         pr:
           display: absolute
-          palette: x-Occam
+          palette: seq-YlGnBu
           logscale: true
           belowMinColor: white
           aboveMaxColor: black
@@ -429,7 +429,7 @@ tabs:
               ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000, 2000]
         prsn:
           display: absolute
-          palette: x-Occam
+          palette: seq-YlGnBu
           logscale: true
           seasons:
             annual:
@@ -465,7 +465,7 @@ tabs:
         tasmean:
           display: absolute
           displayUnits: °C
-          palette: x-Occam
+          palette: div-BuRd2
           seasons:
             winter:
               range:
