--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -273,7 +273,7 @@ tabs:
         ffd:
           display: absolute
           displayUnits: days
-          palette: seq-OrRd
+          palette: div-RdYlBu-inv
           seasons:
             annual:
               range:
@@ -303,7 +303,7 @@ tabs:
         gdd:
           display: absolute
           displayUnits: degree-days
-          palette: seq-YlGn
+          palette: div-RdYlBu-inv
           seasons:
             annual:
               range:
@@ -333,7 +333,7 @@ tabs:
         hdd:
           display: absolute
           displayUnits: degree-days
-          palette: seq-PuBu
+          palette: div-RdYlBu
           seasons:
             winter:
               range:
@@ -363,7 +363,7 @@ tabs:
         cdd:
           display: absolute
           displayUnits: degree-days
-          palette: seq-OrRd
+          palette: div-RdYlBu-inv
           seasons:
             winter:
               range:
@@ -392,7 +392,7 @@ tabs:
               ticks: [0, 100, 200, 300, 400, 500]
         pr:
           display: absolute
-          palette: seq-YlGnBu
+          palette: div-RdYlBu
           logscale: true
           belowMinColor: white
           aboveMaxColor: black
@@ -429,7 +429,7 @@ tabs:
               ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000, 2000]
         prsn:
           display: absolute
-          palette: seq-YlGnBu
+          palette: div-RdYlBu
           logscale: true
           seasons:
             annual:
@@ -465,7 +465,7 @@ tabs:
         tasmean:
           display: absolute
           displayUnits: °C
-          palette: div-BuRd2
+          palette: div-RdYlBu-inv
           seasons:
             winter:
               range:
@@ -475,8 +475,8 @@ tabs:
             spring:
               range:
                 min: -5
-                max: 10
-              ticks: [-5, 0, 5, 10]
+                max: 15
+              ticks: [-5, 0, 5, 10, 15]
             summer:
               range:
                 min: 5
